# xskat

./: .clang-format  .gitignore  ARCHITECTURE.md  CHANGES-de  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL  INSTALL-de  Imakefile  LICENSE  Makefile  README  README-de  README.IRC-de  README.md  bitmaps.c  bitmaps.h  cards.c  defs.h  irc.c  irc.h  null.c  null.h  ramsch.c  ramsch.h  skat.c  skat.h  text.c  text.h  ui_abst.h  ui_x11.c  ui_x11.h  xdial.c  xdial.h  xio.c  xio.h
.github/workflows/: ci.yml  cmake-ubuntu.yml
include/: bitmaps.h  core_utils.h  game_interfaces.h  irc.h  skat.h
include/application/: ai_engine.h  file_manager.h  game_engine.h  game_services.h  irc.h  settings.h  text.h
include/domain/: game_rules.h  null.h  ramsch.h  skat_constants.h  skat_core.h  skat_enums.h  skat_game.h  utils.h
include/ui/: bitmaps.h  presentation.h  xdial.h  xio.h
src/: CMakeLists.txt  bitmaps.c  skat.c  skat.cpp  xdial.c  xio.c
src/application/: CMakeLists.txt  GameController.cpp  GameController.h  IrcClient.cpp  IrcClient.h  Preferences.cpp  Preferences.h  ai_engine.c  ai_engine.cpp  file_manager.c  file_manager.cpp  game_engine.c  game_engine.cpp  irc.c  irc.cpp  ramsch.c  settings.cpp  text.c  text.cpp
src/domain/: CMakeLists.txt  Card.cpp  Card.h  ComputerPlayer.cpp  ComputerPlayer.h  Deck.cpp  Deck.h  GameRules.cpp  GameRules.h  GameState.cpp  GameState.h  Player.cpp  Player.h  null.c  null.cpp  ramsch.c  ramsch.cpp  skat_core.c  skat_core.cpp  skat_game.c  utils.cpp
src/ui/: CMakeLists.txt  bitmaps.c  cards.c  irc.c  ramsch.c  sdl_ui.cpp  skat.c  text.c  ui_bridge.cpp  ui_bridge.h  xdial.c  xdial.cpp  xio.c  xio.cpp  xio.h
